[gd_scene load_steps=9 format=3 uid="uid://dhhegj5camow0"]

[ext_resource type="Script" uid="uid://ckl8uhw4otnq1" path="res://QuizAlt/tema.gd" id="1_vso4q"]
[ext_resource type="Texture2D" uid="uid://b5q2we1p5k2yy" path="res://Arts/Textures_Game/Background/bgtheme.jpg" id="2_ojrhi"]
[ext_resource type="AudioStream" uid="uid://ca4unfbg03kgm" path="res://Arts/Audio/btn.wav" id="3_sjqcm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sjqcm"]
texture = ExtResource("2_ojrhi")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fupdq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vso4q"]
bg_color = Color(0, 0.443137, 0.647059, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojrhi"]
bg_color = Color(0.0117647, 0.207843, 0.337255, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjqcm"]
bg_color = Color(0.882353, 0.0784314, 0.0509804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vso4q")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.0304689, 0.275583, 2.40654e-08, 1)
layout_mode = 0
offset_left = -16.0
offset_top = -8.0
offset_right = 1174.0
offset_bottom = 667.0
theme_override_styles/panel = SubResource("StyleBoxTexture_sjqcm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -135.0
offset_right = 255.0
offset_bottom = 175.59
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.961, 0.961)
theme_override_constants/separation = 38

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.732402, 1, 0.707756, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fupdq")
theme_override_styles/hover = SubResource("StyleBoxFlat_vso4q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojrhi")
theme_override_styles/normal = SubResource("StyleBoxFlat_sjqcm")
text = "Variado"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.732402, 1, 0.707756, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fupdq")
theme_override_styles/hover = SubResource("StyleBoxFlat_vso4q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojrhi")
theme_override_styles/normal = SubResource("StyleBoxFlat_sjqcm")
text = "Hist√≥ria"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.732402, 1, 0.707756, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fupdq")
theme_override_styles/hover = SubResource("StyleBoxFlat_vso4q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojrhi")
theme_override_styles/normal = SubResource("StyleBoxFlat_sjqcm")
text = "Biologia"

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_sjqcm")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="pressed_variados"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="pressed_historia"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="pressed_bio"]
